--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,130 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 1200px;
+  margin: 0 auto;
 }
 
-.App-link {
-  color: #61dafb;
+.Header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 75px;
+  line-height: 75px;
+  background: rgba(0, 0, 0, 0.75);
+  color: #fff;
+  z-index: 999;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Header .container {
+  justify-content: space-between;
+}
+
+.Header .container h1 img {
+  width: 150px;
+  vertical-align: middle;
+}
+
+.Navmenu ul {
+  display: flex;
+  gap: 50px;
+}
+
+.Navmenu ul>li {
+  position: relative;
+}
+
+.Navmenu ul>li::after {
+  position: absolute;
+  content: "";
+  display: block;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  height: 3px;
+  background: #fff;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.5s;
+}
+
+.Navmenu ul>li:hover::after {
+  opacity: 1;
+  visibility: visible;
+}
+
+.Navmenu ul>li>ul {
+  position: absolute;
+  display: block;
+  top: 75px;
+  left: 50%;
+  transform: translateX(-50%);
+  line-height: 50px;
+  width: 120px;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  visibility: hidden;
+}
+
+.Navmenu ul>li:hover>ul {
+  opacity: 1;
+  visibility: visible;
+}
+
+.Navmenu ul>li>ul>li:hover {
+  background: rgba(0, 0, 0, 0.25);
+}
+
+.Navmenu ul>li>ul>li::after {
+  display: none;
+}
+
+.Navmenu ul>li>ul>li~li {
+  border-top: 1px solid #fff;
+}
+
+.search input {
+  outline: none;
+}
+
+.search button {
+  outline: none;
+  border: none;
+  background: inherit;
+  font-size: 19px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.Main {
+  position: relative;
+}
+
+.Footer {
+  padding: 100px 0;
+  background: #000;
+  color: #fff;
+}
+
+.Footer .container ul {
+  display: flex;
+  gap: 50px;
+}
+
+.Footer .container ul>li>ul {
+  display: block;
+  line-height: 1.414;
+  margin: 20px 0 0 0;
+}
+
+.Footer .container .sns {
+  display: flex;
+  gap: 10px;
+}
+
+.Footer .container .subscribe {
+  display: flex;
+  gap: 10px;
 }
