--- a/src/css/Blog.css
+++ b/src/css/Blog.css
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: space-between;
     margin: 0 0 50px 0;
+    border: 1px solid #ddd;
 }
 
 .Bloglist .container .content {
