--- a/src/css/Characteristic.css
+++ b/src/css/Characteristic.css
@@ -4,6 +4,13 @@
     margin: 0 auto;
 }
 
+.Characteristic h2 {
+    font-size: 35px;
+    font-weight: 700;
+    margin: 0 0 50px 0;
+    text-align: center;
+}
+
 .VChar {
     padding: 100px 0 0 0;
     background: #3a1a65;
