--- a/src/css/Characteristic.css
+++ b/src/css/Characteristic.css
@@ -7,7 +7,7 @@
 .Characteristic h2 {
     font-size: 35px;
     font-weight: 700;
-    margin: 0 0 50px 0;
+    margin: 50px 0;
     text-align: center;
 }
 
